# TechnoPark

./: .gitignore  CMakeLists.txt  Chess.h  DataStructures.h  Knight.h  Pawn.h  README.md  Settings.h  chess_coord.h  chess_coord_array.h  chess_coord_tree.h  chess_coord_tree_array.h  figure_info.h  main.c  pawn.h  Подготовка к основной программе.docx
.github/workflows/: greetings.yml
Chess/: Chess.h  DataStructures.h  chess_coord.h  chess_coord_array.h  chess_coord_tree.h  chess_coord_tree_array.h  figure_info.h
DataStructures/: Array.h  BalancedBinarySearchTree.h  DequeArray.h  DequeList.h  DoublyLinkedList.h  FIFOList.h  IntArray.h  LIFOList.h  SimplyLinkedList.h
SortAlgos/: Bubble.h  Comb.h  Insertion.h  IntArray.h  Merge.h  Quick.h  Select.h  Shaker.h  TestSort.h
